--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ aside a {text-decoration: none;
                     background-color: #fff;
                     padding: 2%;
                     border-radius: 5px;
-                    width: 90%;}
+                    width: 90%;
+                    display: table;}
 .featuredImage {max-width: 100%;}
 .bold {font-weight: bold;}
 footer {background-color: #eee;
@@ -50,3 +51,43 @@ div#copyright {width: 200px;
                 margin: 0px auto;
                 font-style: italic;
                 padding-top: 35px;}
+.tableRow {display: table-row;}
+.tableCell {display: table-cell;
+        padding: 10px 0px;}
+.tableCell:first-child {font-weight: bold;}
+#cartButtons {text-align: right;
+                padding: 15px 3% 0px 0px;}
+#cartButtons button {background-color: #037DBE;
+                        border: none;
+                        border-radius: 3px;
+                        color: #fff;
+                        padding: 2%;
+                        cursor: pointer;}
+#cartButtons #clearButton {background-color: #eee;
+                        border: solid 1px #037dbe;
+                        color: #037dbe;}
+.borderBottom {border-bottom: solid 1px #bbb;}
+.removeLink {text-align: right;
+        font-size: 80%;
+        color: #037dbe;}
+#cardContainer {display: flex;
+                justify-content:space-between;
+                flex-wrap: wrap;}
+.card {box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 25%;
+        border-radius: 5px;
+        padding: 15px;
+        margin-bottom: 40px;}
+.card:hover {box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);}
+.card img {border-radius: 20px;
+        width: 100%;
+        height:50%;}
+.cardText {padding: 2px 16px;}
+.cardText button {float: right;
+                background-color: #037dbe;
+                color: #fff;
+                border: none;
+                padding: 5px;
+                border-radius: 3px;
+                cursor: pointer;}
