create cart.js and add code to make cart items appear and able to remove

--- a/style.css
+++ b/style.css
@@ -112,3 +112,5 @@ div#copyright {width: 200px;
         padding-left: 10px;}
 .removeMargins {margin: 0;}
 .textAlignRight {text-align: right;}
+#emptyCart {font-style: italic;
+        margin: 0;}
